--- a/From_2Ds_to_3D.ipynb
+++ b/From_2Ds_to_3D.ipynb
@@ -41,36 +41,51 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
         "collapsed": true,
         "id": "GzV0iWjiOXmL",
-        "outputId": "eca49571-90b8-4fb9-f114-a5f3df8af841"
+        "outputId": "6f56230b-3e04-4a5a-981d-ba22063e4530"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
-            "Requirement already satisfied: pycolmap in /usr/local/lib/python3.12/dist-packages (3.12.6)\n",
-            "Requirement already satisfied: open3d in /usr/local/lib/python3.12/dist-packages (0.19.0)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 47.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Collecting pycolmap\n",
+            "  Downloading pycolmap-3.12.6-cp312-cp312-manylinux_2_28_x86_64.whl.metadata (10 kB)\n",
+            "Collecting open3d\n",
+            "  Downloading open3d-0.19.0-cp312-cp312-manylinux_2_31_x86_64.whl.metadata (4.3 kB)\n",
             "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (3.10.0)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (2.0.2)\n",
             "Requirement already satisfied: pillow in /usr/local/lib/python3.12/dist-packages (11.3.0)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (4.67.1)\n",
-            "Requirement already satisfied: dash>=2.6.0 in /usr/local/lib/python3.12/dist-packages (from open3d) (3.2.0)\n",
+            "Collecting dash>=2.6.0 (from open3d)\n",
+            "  Downloading dash-3.2.0-py3-none-any.whl.metadata (10 kB)\n",
             "Requirement already satisfied: werkzeug>=3.0.0 in /usr/local/lib/python3.12/dist-packages (from open3d) (3.1.3)\n",
             "Requirement already satisfied: flask>=3.0.0 in /usr/local/lib/python3.12/dist-packages (from open3d) (3.1.2)\n",
             "Requirement already satisfied: nbformat>=5.7.0 in /usr/local/lib/python3.12/dist-packages (from open3d) (5.10.4)\n",
-            "Requirement already satisfied: configargparse in /usr/local/lib/python3.12/dist-packages (from open3d) (1.7.1)\n",
-            "Requirement already satisfied: ipywidgets>=8.0.4 in /usr/local/lib/python3.12/dist-packages (from open3d) (8.1.7)\n",
-            "Requirement already satisfied: addict in /usr/local/lib/python3.12/dist-packages (from open3d) (2.4.0)\n",
+            "Collecting configargparse (from open3d)\n",
+            "  Downloading configargparse-1.7.1-py3-none-any.whl.metadata (24 kB)\n",
+            "Collecting ipywidgets>=8.0.4 (from open3d)\n",
+            "  Downloading ipywidgets-8.1.7-py3-none-any.whl.metadata (2.4 kB)\n",
+            "Collecting addict (from open3d)\n",
+            "  Downloading addict-2.4.0-py3-none-any.whl.metadata (1.0 kB)\n",
             "Requirement already satisfied: pandas>=1.0 in /usr/local/lib/python3.12/dist-packages (from open3d) (2.2.2)\n",
             "Requirement already satisfied: pyyaml>=5.4.1 in /usr/local/lib/python3.12/dist-packages (from open3d) (6.0.3)\n",
             "Requirement already satisfied: scikit-learn>=0.21 in /usr/local/lib/python3.12/dist-packages (from open3d) (1.6.1)\n",
-            "Requirement already satisfied: pyquaternion in /usr/local/lib/python3.12/dist-packages (from open3d) (0.9.9)\n",
+            "Collecting pyquaternion (from open3d)\n",
+            "  Downloading pyquaternion-0.9.9-py3-none-any.whl.metadata (1.4 kB)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (1.3.3)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (0.12.1)\n",
             "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib) (4.60.1)\n",
@@ -82,7 +97,8 @@
             "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.12/dist-packages (from dash>=2.6.0->open3d) (8.7.0)\n",
             "Requirement already satisfied: typing-extensions>=4.1.1 in /usr/local/lib/python3.12/dist-packages (from dash>=2.6.0->open3d) (4.15.0)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.12/dist-packages (from dash>=2.6.0->open3d) (2.32.4)\n",
-            "Requirement already satisfied: retrying in /usr/local/lib/python3.12/dist-packages (from dash>=2.6.0->open3d) (1.4.2)\n",
+            "Collecting retrying (from dash>=2.6.0->open3d)\n",
+            "  Downloading retrying-1.4.2-py3-none-any.whl.metadata (5.5 kB)\n",
             "Requirement already satisfied: nest-asyncio in /usr/local/lib/python3.12/dist-packages (from dash>=2.6.0->open3d) (1.6.0)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from dash>=2.6.0->open3d) (75.2.0)\n",
             "Requirement already satisfied: blinker>=1.9.0 in /usr/local/lib/python3.12/dist-packages (from flask>=3.0.0->open3d) (1.9.0)\n",
@@ -90,10 +106,12 @@
             "Requirement already satisfied: itsdangerous>=2.2.0 in /usr/local/lib/python3.12/dist-packages (from flask>=3.0.0->open3d) (2.2.0)\n",
             "Requirement already satisfied: jinja2>=3.1.2 in /usr/local/lib/python3.12/dist-packages (from flask>=3.0.0->open3d) (3.1.6)\n",
             "Requirement already satisfied: markupsafe>=2.1.1 in /usr/local/lib/python3.12/dist-packages (from flask>=3.0.0->open3d) (3.0.3)\n",
-            "Requirement already satisfied: comm>=0.1.3 in /usr/local/lib/python3.12/dist-packages (from ipywidgets>=8.0.4->open3d) (0.2.3)\n",
+            "Collecting comm>=0.1.3 (from ipywidgets>=8.0.4->open3d)\n",
+            "  Downloading comm-0.2.3-py3-none-any.whl.metadata (3.7 kB)\n",
             "Requirement already satisfied: ipython>=6.1.0 in /usr/local/lib/python3.12/dist-packages (from ipywidgets>=8.0.4->open3d) (7.34.0)\n",
             "Requirement already satisfied: traitlets>=4.3.1 in /usr/local/lib/python3.12/dist-packages (from ipywidgets>=8.0.4->open3d) (5.7.1)\n",
-            "Requirement already satisfied: widgetsnbextension~=4.0.14 in /usr/local/lib/python3.12/dist-packages (from ipywidgets>=8.0.4->open3d) (4.0.14)\n",
+            "Collecting widgetsnbextension~=4.0.14 (from ipywidgets>=8.0.4->open3d)\n",
+            "  Downloading widgetsnbextension-4.0.14-py3-none-any.whl.metadata (1.6 kB)\n",
             "Requirement already satisfied: jupyterlab_widgets~=3.0.15 in /usr/local/lib/python3.12/dist-packages (from ipywidgets>=8.0.4->open3d) (3.0.15)\n",
             "Requirement already satisfied: fastjsonschema>=2.15 in /usr/local/lib/python3.12/dist-packages (from nbformat>=5.7.0->open3d) (2.21.2)\n",
             "Requirement already satisfied: jsonschema>=2.6 in /usr/local/lib/python3.12/dist-packages (from nbformat>=5.7.0->open3d) (4.25.1)\n",
@@ -104,7 +122,8 @@
             "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=0.21->open3d) (1.16.2)\n",
             "Requirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=0.21->open3d) (1.5.2)\n",
             "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn>=0.21->open3d) (3.6.0)\n",
-            "Requirement already satisfied: jedi>=0.16 in /usr/local/lib/python3.12/dist-packages (from ipython>=6.1.0->ipywidgets>=8.0.4->open3d) (0.19.2)\n",
+            "Collecting jedi>=0.16 (from ipython>=6.1.0->ipywidgets>=8.0.4->open3d)\n",
+            "  Downloading jedi-0.19.2-py2.py3-none-any.whl.metadata (22 kB)\n",
             "Requirement already satisfied: decorator in /usr/local/lib/python3.12/dist-packages (from ipython>=6.1.0->ipywidgets>=8.0.4->open3d) (4.4.2)\n",
             "Requirement already satisfied: pickleshare in /usr/local/lib/python3.12/dist-packages (from ipython>=6.1.0->ipywidgets>=8.0.4->open3d) (0.7.5)\n",
             "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.12/dist-packages (from ipython>=6.1.0->ipywidgets>=8.0.4->open3d) (3.0.52)\n",
@@ -125,7 +144,34 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests->dash>=2.6.0->open3d) (2025.10.5)\n",
             "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /usr/local/lib/python3.12/dist-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets>=8.0.4->open3d) (0.8.5)\n",
             "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.12/dist-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets>=8.0.4->open3d) (0.7.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.12/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=6.1.0->ipywidgets>=8.0.4->open3d) (0.2.14)\n"
+            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.12/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=6.1.0->ipywidgets>=8.0.4->open3d) (0.2.14)\n",
+            "Downloading pycolmap-3.12.6-cp312-cp312-manylinux_2_28_x86_64.whl (20.2 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.2/20.2 MB\u001b[0m \u001b[31m86.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading open3d-0.19.0-cp312-cp312-manylinux_2_31_x86_64.whl (447.7 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m447.7/447.7 MB\u001b[0m \u001b[31m1.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading dash-3.2.0-py3-none-any.whl (7.9 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.9/7.9 MB\u001b[0m \u001b[31m106.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading ipywidgets-8.1.7-py3-none-any.whl (139 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m139.8/139.8 kB\u001b[0m \u001b[31m11.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading addict-2.4.0-py3-none-any.whl (3.8 kB)\n",
+            "Downloading configargparse-1.7.1-py3-none-any.whl (25 kB)\n",
+            "Downloading pyquaternion-0.9.9-py3-none-any.whl (14 kB)\n",
+            "Downloading comm-0.2.3-py3-none-any.whl (7.3 kB)\n",
+            "Downloading widgetsnbextension-4.0.14-py3-none-any.whl (2.2 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.2/2.2 MB\u001b[0m \u001b[31m60.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading retrying-1.4.2-py3-none-any.whl (10 kB)\n",
+            "Downloading jedi-0.19.2-py2.py3-none-any.whl (1.6 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m60.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: addict, widgetsnbextension, retrying, pyquaternion, pycolmap, jedi, configargparse, comm, ipywidgets, dash, open3d\n",
+            "  Attempting uninstall: widgetsnbextension\n",
+            "    Found existing installation: widgetsnbextension 3.6.10\n",
+            "    Uninstalling widgetsnbextension-3.6.10:\n",
+            "      Successfully uninstalled widgetsnbextension-3.6.10\n",
+            "  Attempting uninstall: ipywidgets\n",
+            "    Found existing installation: ipywidgets 7.7.1\n",
+            "    Uninstalling ipywidgets-7.7.1:\n",
+            "      Successfully uninstalled ipywidgets-7.7.1\n",
+            "Successfully installed addict-2.4.0 comm-0.2.3 configargparse-1.7.1 dash-3.2.0 ipywidgets-8.1.7 jedi-0.19.2 open3d-0.19.0 pycolmap-3.12.6 pyquaternion-0.9.9 retrying-1.4.2 widgetsnbextension-4.0.14\n"
           ]
         }
       ]
@@ -173,9 +219,9 @@
         },
         "collapsed": true,
         "id": "lY1V7hNIOisG",
-        "outputId": "eabed4d1-cdd9-4353-f9d3-c07d3e439319"
+        "outputId": "83a6437f-b848-4214-8fa0-7b72c13f332c"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +256,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Initialize empty COLMAP database (fixed)\n",
+        "#@title Initialize empty COLMAP database\n",
         "from pycolmap import Database\n",
         "\n",
         "if os.path.exists(db_path):\n",
@@ -227,9 +273,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AFV-wYmsbXIx",
-        "outputId": "21823d78-95e6-4cf8-dacc-7ff70dba8deb"
+        "outputId": "23a9ef23-8bc7-4632-a091-a9a7e11940dc"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,9 +305,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nPg8oCUYa-KN",
-        "outputId": "06857b80-2be0-4f56-e42d-bd4673627d97"
+        "outputId": "ecac3b12-0fba-4e08-8069-077b34092804"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,28 +330,16 @@
         "print(\"✅ Feature matching done.\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "Z9k2jU5HOzVv",
-        "outputId": "562bb3f3-c94f-42fc-c686-65518b147a40"
+        "id": "Z9k2jU5HOzVv"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Feature matching done.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#@title Incremental mapping (pose estimation + triangulation + BA) - FIXED\n",
+        "#@title Incremental mapping (pose estimation + triangulation + BA)\n",
         "from pycolmap import IncrementalPipelineOptions\n",
         "\n",
         "reconstructions = pycolmap.incremental_mapping(\n",
@@ -358,7 +392,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Visualize 3D Sparse Point Cloud Only\n",
+        "#@title Visualize 3D Sparse Point Cloud\n",
         "\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
